Reports swagger endpoint working
